@@ -5,6 +5,7 @@ v1.6 - Pending
 	+ Bug: Fix play/pause with multimedia keys (Vinay)
 	+ Bug: Prevent possible traceback from gobject.filename_from_utf8
 	+ Bug: 'play after replace' when in shuffle mode plays 1st song, not random
+	+ Bug: Fix random & repeat commands from console
 
 v1.5 - April 3, 2008
 	+ Replace album view with genre view for library
